tests/compile_fail/unsupported_abi_override.c
#define MFSM_MAX_STATES 64
#include "mfsm.h"

int main(void)
{
    return 0;
}
